c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/sizeof_function.c
int x(void) { return 0; }

// can't apply sizeof to a function
int main(void) { return sizeof x; }